--- a/index.html
+++ b/index.html
@@ -1,58 +1,58 @@
 <html>
   <head>
-    <title>My website</title>
+    <title>Jake's website</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav id="top">
-      <h1 class="initials">JB</h1>
-      <h2><a href="mailto:email@example.com">✉ jakeblack@iadt.ie</a></h2>
+    <nav>
+      <h1>JB</h1>
+      <ul>
+        <a href="#hobbies"><li>Hobbies</li></a>
+        <a href="#interests"><li>Interests</li></a>
+        <li><a href="mailto:email@example.com">✉ email@example.com</a></li>
+      </ul>
     </nav>
     <main>
-      <div class="profile-item">
-        <img
-          id="profile-picture"
-          class="profile-picture"
-          src="jake.png"
-          width="250"
-        />
-        <h2>My name is Jake 👋</h2>
-      </div>
-
-      <hr width="100%" />
+      <div id="top"></div>
+      <img width="250" src="images/man.jpg" />
+      <h1>Hello! I'm Jake</h1>
+      <hr />
 
       <div class="profile-item">
         <h1>About me</h1>
         <h4>
-          Hi, I'm (your name), a (whatever you do) with a passion for (your
-          interests). I enjoy (your hobby) and (another hobby) and I'm
-          constantly seeking new opportunities to learn and grow in (something
-          you like). Welcome to my website!
+          Hi, I'm (your name), a (whatever you do) with a passion for
+          (interests)
         </h4>
       </div>
 
-      <div class="profile-item">
-        <h1>My interests</h1>
-        <img src="hedgehog.png" width="250" />
+      <div id="interests" class="profile-item">
+        <h1>My Interests</h1>
+        <img width="250" src="images/hedgehog.jpg" />
         <h2>Hedgehogs</h2>
-        <h4>
-          I've always been fascinated by hedgehogs due to their adorable quills
-          and unique appearance. Hedgehogs are such interesting creatures, and I
-          love how they curl up into little balls for protection.
-        </h4>
+        <h4>I really love hedgehogs. Nothing more to it.</h4>
       </div>
 
-      <div class="profile-item">
-        <img src="rosie.JPEG" width="250" />
+      <div id="hobbies" class="profile-item">
+        <h1>My Hobbies</h1>
+        <img src="" />
         <h2>Cats</h2>
-        <h4>
-          Cats have this incredible ability to be both independent and
-          affectionate, which I find endearing. There's something captivating
-          about a cat's graceful movements and their mysterious, curious nature.
-        </h4>
+        <h4>I really love cats. Nothing more to it.</h4>
       </div>
+
+      <!-- GALLERY STARTS HERE -->
+
+      <div id="gallery">
+        <button id="prev">◀</button>
+        <img src="images/hedgehog.jpg" id="gallery-img" />
+        <button id="next">▶</button>
+      </div>
+
+      <!-- end gallery -->
     </main>
-    <footer><a href="#top">Back to top</a></footer>
+    <footer>
+      <a href="#top">Back to top</a>
+    </footer>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
